--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,8 +6,8 @@
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
+<body background="cebu-hk-test001/app/assets/images/tequila001.jpg">
 <body>
-
 <%= yield %>
 
 </body>
