--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,4 @@
 <p id="notice"><%= notice %></p>
-<body background="tequila001">
 <h1>CEBU test001</h1>
 
 <table>
@@ -23,6 +22,7 @@
         <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
+    <body background="/tequila001.jpg" >
   </tbody>
 </table>
 
