ページの見え方を変えました

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,3 +1,8 @@
+<div class="main top-main">
+  <div class="top-message">
+    <h2>つぶやきで、世界はつながる</h2>
+    <p>今の気持ちをつぶやいてみよう！</p>
+
 <p id="notice"><%= notice %></p>
 <h1>CEBU test001</h1>
 
@@ -29,3 +34,7 @@
 <br>
 
 <%= link_to 'New User', new_user_path %>
+
+  </div>
+</div>
+
