テキーラになりました2

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,10 +1,8 @@
 <div class="main top-main">
   <div class="top-message">
-    <h2>つぶやきで、世界はつながる</h2>
-    <p>今の気持ちをつぶやいてみよう！</p>
+    <h2>Tequilaで、世界はつながる</h2>
 
 <p id="notice"><%= notice %></p>
-<h1>CEBU test001</h1>
 
 <table>
   <thead>
